force-app/main/default/objects/Health_and_Immunization__c.object
<CustomObject>
    <fields>
        <fullName>SSR_Social_Displays_External__c</fullName>
        <description>Displays externalizing behaviors (fighting,  assaulting, vandalizing)</description>
        <label>SSR Social Displays External</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Social_Displays_Internal__c</fullName>
        <description>Displays internalizing behaviors (fears,  phobias, depression, withdrawn)</description>
        <label>SSR Social Displays Internal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Social_Inappropriate__c</fullName>
        <description>Displays inappropriate types of behavior or feelings  under normal circumstances</description>
        <label>SSR Social Inappropriate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Social_Other__c</fullName>
        <description>SSR Social Other</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSR Social Other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Vision_HasWeak__c</fullName>
        <description>Has weak note taking skills</description>
        <label>SSR Vision HasWeak</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Vision_Has_Trouble__c</fullName>
        <description>Has trouble with eyes</description>
        <label>SSR Vision Has Trouble</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Vision_Holds__c</fullName>
        <description>Holds book too close or too far</description>
        <label>SSR Vision Holds</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSR_Vision_Other__c</fullName>
        <description>SSR Vision Other</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSR Vision Other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR_Vision_Squints__c</fullName>
        <description>Squints or has trouble seeing computer</description>
        <label>SSR Vision Squints</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Height__c</fullName>
        <description>Student&apos;s height (in inches)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Student Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Weight__c</fullName>
        <description>Enter your student&apos;s weight (in pounds/lbs)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Student Weight</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TdapBooster__c</fullName>
        <label>Tdap_Booster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Health_Insurance__c</fullName>
        <description>Type of  health insurance</description>
        <label>Type Health Insurance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>No health insurance</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>V2_External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>V2 External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vision_Screening_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Screening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision Screening</label>
        <type>Checkbox</type>
    </fields>
    <label>Health and Immunization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HI-{0000}</displayFormat>
        <label>Health and Immunization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health and Immunizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>